--- a/exo_recette.html
+++ b/exo_recette.html
@@ -26,7 +26,7 @@
             </div>
                         
             <div class="info">
-                <img class="centre info" src="https://jonathanroux.com/gateau.jpg?hhuh">
+                <img class="centre info" src="gateau.jpg">
                 
                 <table class="info">
                     <tr>
